Closed Bug 1587841 Opened 6 years ago Closed 6 years ago

The uuid returned by GetSecureID in updater.cpp isn't properly null terminated

Categories

(Toolkit :: Application Update, defect, P1)

defect

Tracking

()

RESOLVED FIXED
mozilla71
Tracking Status
firefox71 --- fixed

People

(Reporter: robert.strong.bugs, Assigned: robert.strong.bugs)

References

Details

Attachments

(1 file)

Found via code inspection

Pushed by rstrong@mozilla.com: https://hg.mozilla.org/integration/autoland/rev/8d011a76f34b properly null terminate the uuid string returned by GetSecureID in updater.cpp. r=mhowell
Status: ASSIGNED → RESOLVED
Closed: 6 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla71
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: