Bug 1587841 - properly null terminate the uuid string returned by GetSecureID in updater.cpp. r=mhowell

Differential Revision: https://phabricator.services.mozilla.com/D48872